--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,8 +13,8 @@ ENV FLASK_PORT=80
 ENV SQLALCHEMY_MAX_OVERFLOW=20
 ENV SQLALCHEMY_POOL_SIZE=20
 
-RUN pip install -r requirements.txt
 RUN pip install --upgrade setuptools
+RUN pip install -e .
 
 ENTRYPOINT ["flask"]
 CMD ["run", "-p", "80", "-h", "0.0.0.0"]
