FIX add env variables to docker compose file, remove redundunt method from init file

--- a/app/docker-compose-python.yaml
+++ b/app/docker-compose-python.yaml
@@ -15,6 +15,7 @@ services:
       - PG_PASS=${PG_PASS}
       - PG_HOST=${PG_HOST}
       - PG_USER=${PG_USER}
+      - SECRET_KEY=${SECRET_KEY}
     networks:
       - pasta_net
     volumes:
